<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>celtech</groupId>
    <artifactId>CELTechCore</artifactId>
    <version>1.2</version>
    <packaging>jar</packaging>
    
    <distributionManagement>
        <repository>
            <id>celtechRepo</id>
            <name>CELTech releases</name>
            <url>http://build.cel-robox.com:8080/artifactory/libs-release-local</url>
        </repository>        
        <snapshotRepository>
            <id>celtechRepo</id>
            <name>CELTech snapshots</name>
            <url>http://build.cel-robox.com:8080/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    
    <build>
        <resources>
            <resource>
                <directory>src/main/java/celtech/resources</directory>
                <targetPath>celtech/resources</targetPath>
            </resource>
        </resources>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.1</version>
        </dependency>
        <!--        <dependency>
            <groupId>LeapMotion</groupId>
            <artifactId>LeapJava</artifactId>
            <version>1.0.9.8391</version>
            <type>jar</type>
        </dependency>-->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>11.0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>9.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.3</version>
        </dependency>
        <!--        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>4.0.0</version>
        </dependency>        -->
        <dependency>
            <groupId>libertysystems</groupId>
            <artifactId>Configuration</artifactId>
            <version>1.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>libertysystems</groupId>
            <artifactId>Stenographer</artifactId>
            <version>1.9</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jfxtras</groupId>
            <artifactId>jfxtras-controls</artifactId>
            <version>8.0-r3</version>
        </dependency>
        <dependency>
            <groupId>com.github.junrar</groupId>
            <artifactId>junrar</artifactId>
            <version>0.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.8</version>
        </dependency>
        <!--        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacv</artifactId>
            <version>0.11</version>
        </dependency>-->
        <dependency>
            <groupId>xml-resolver</groupId>
            <artifactId>xml-resolver</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.9.6</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>2.8.6</version>
         </dependency>
        <dependency>
            <groupId>org.codehaus.woodstox</groupId>
            <artifactId>woodstox-core-asl</artifactId>
            <version>4.1.4</version>
        </dependency>
        <!--        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.12</version>
        </dependency>-->
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-bridge</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>celtech</groupId>
            <artifactId>RoboxBase</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.orbisgis</groupId>
            <artifactId>poly2tri-core</artifactId>
            <version>0.1.2</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    
    <reporting>                                                                              
        <plugins>                                                                            
            <plugin>                                                                         
                <groupId>org.apache.maven.plugins</groupId>                                  
                <artifactId>maven-javadoc-plugin</artifactId>                                
                <version>2.9</version>                                                       
                <configuration>                                                              
                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>                         
                    <docletArtifact>                                                         
                        <groupId>org.umlgraph</groupId>                                      
                        <artifactId>umlgraph</artifactId>                                    
                        <version>5.6</version>                                               
                    </docletArtifact>                                                        
                    <additionalparam>-views -all</additionalparam>                           
                    <useStandardDocletOptions>true</useStandardDocletOptions>                
                </configuration>                                                             
            </plugin>                                                                        
        </plugins>                                                                           
    </reporting>  
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

</project>
